Linux scanner agent
